Item317: Integrate JQueryTwistyPlugin and TwistyContrib into TwistyPlugin; makes the other plugin/contrib redundant
git-svn-id: http://svn.foswiki.org/trunk@1033 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TwistyPlugin/templates/twistyplugin.dojo.tmpl
+++ b/TwistyPlugin/templates/twistyplugin.dojo.tmpl
@@ -1,8 +1,6 @@
-
 %TMPL:INCLUDE{twistyplugin}%
 
-%TMPL:DEF{twisty:header}%
-<style type="text/css" media="all">
+%TMPL:DEF{twisty:header}%DOJO<style type="text/css" media="all">
 @import url("%PUBURL%/%SYSTEMWEB%/TwistyContrib/twist.css");
 </style>
 <!-- style type="text/css">
@@ -12,11 +10,6 @@
 -->
 <script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/DojoToolkitContrib/dojo/dojo.js" djConfig="parseOnLoad: true"></script>
 <script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js"></script>
-<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twistie.dojo.js"></script>
-<script type="text/javascript">
-// <![CDATA[
-var styleText = '<style type="text/css" media="all">.twikiMakeVisible{display:inline;}.twikiMakeVisibleInline{display:inline;}.twikiMakeVisibleBlock{display:block;}.twikiMakeHidden{display:none;}</style>';
-document.write(styleText);
-// ]]>
-</script>
+<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/TwistyPlugin/twisty.dojo.js"></script>
+<script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiStyles.js"></script>
 %TMPL:END%
