--- a/TwistyPlugin/templates/twistyplugin.jquery.tmpl
+++ b/TwistyPlugin/templates/twistyplugin.jquery.tmpl
@@ -1,17 +1,9 @@
-
 %TMPL:INCLUDE{twistyplugin}%
 
-%TMPL:DEF{twisty:header}%
-<style type="text/css" media="all">
-@import url("%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twistie.jquery.css");
+%TMPL:DEF{twisty:header}%JQUERY<style type="text/css" media="all">
+@import url("%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.css");
 </style>
-<script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twistie.jquery.js"></script>
+<script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/TwistyPlugin/twisty.jquery.js"></script>
 <script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js"></script>
-<script type="text/javascript">
-// <![CDATA[
-var styleText = '<style type="text/css" media="all">.twikiMakeVisible{display:inline;}.twikiMakeVisibleInline{display:inline;}.twikiMakeVisibleBlock{display:block;}.twikiMakeHidden{display:none;}</style>';
-document.write(styleText);
-// ]]>
-</script>
+<script type="text/javascript" src="%PUBURL%/%SYSTEMWEB%/JavascriptFiles/foswikiStyles.js"></script>
 %TMPL:END%
-
