Item330: remove twiki from templates
git-svn-id: http://svn.foswiki.org/trunk@1035 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/pub/System/SkinTemplates/default.css
+++ b/core/pub/System/SkinTemplates/default.css
@@ -1,4 +1,4 @@
-/* Simple CSS demonstrating use of css to theme the default TWiki templates.
+/* Simple CSS demonstrating use of css to theme the default Foswiki templates.
  * Note to installers; do *not* modify this file, and don't assume it will
  * remain unchanged in the future. If you want to create your own themed
  * CSS, then create your own skin that overrides %TMPL:DEF{"templatestyle"}%
