--- a/PatternSkin/templates/css.pattern.tmpl
+++ b/PatternSkin/templates/css.pattern.tmpl
@@ -1,13 +1,13 @@
 %TMPL:INCLUDE{"css"}%
-%TMPL:DEF{"twikistyle"}%%TMPL:P{"stylesscreen"}%
-%TMPL:P{"stylesprint"}%%TMPL:END%
+%TMPL:DEF{"styles:default"}%%TMPL:P{"styles:screen"}%
+%TMPL:P{"styles:print"}%%TMPL:END%
 
 
 %{ template leftbardimensions is included from viewleftbar.pattern.tmpl }%
 %{ template topbardimensions is included from viewtopbar.pattern.tmpl }%
 
 
-%TMPL:DEF{"stylesscreen"}%<style type="text/css" media="all">
+%TMPL:DEF{"styles:screen"}%<style type="text/css" media="all">
 %TMPL:P{"topbardimensions"}%
 %TMPL:P{"leftbardimensions"}%
 </style>
@@ -16,19 +16,19 @@
 %IF{ "$ TWIKISTYLEURL"  then="@import url('%TWIKISTYLEURL%');"}%
 %IF{ "$ TWIKICOLORSURL" then="@import url('%TWIKICOLORSURL%');"}%
 </style>
-%TMPL:P{"stylesdynamic"}%<style type="text/css" media="all">
+%TMPL:P{"styles:skin"}%%TMPL:P{"styles:dynamic"}%<style type="text/css" media="all">
 %IF{ "$ USERLAYOUTURL" then="@import url('%USERLAYOUTURL%');"}%
 %IF{ "$ USERSTYLEURL"  then="@import url('%USERSTYLEURL%');"}%
 %IF{ "$ USERCOLORSURL" then="@import url('%USERCOLORSURL%');"}%
 </style>%TMPL:END%
 
 
-%TMPL:DEF{"stylesprint"}%<style type="text/css" media="all">
+%TMPL:DEF{"styles:print"}%<style type="text/css" media="all">
 	@import url("%PUBURLPATH%/%SYSTEMWEB%/PatternSkin/print.css");
 </style>%TMPL:END%
 
 
-%TMPL:DEF{"stylesdynamic"}%<style type="text/css" media="all">
+%TMPL:DEF{"styles:dynamic"}%<style type="text/css" media="all">
 	/* Styles that are set using variables */
 	.patternBookView .twikiTopRow,
 	.patternWebIndicator a img,
@@ -49,7 +49,11 @@
 </style>%TMPL:END%
 
 
-%TMPL:DEF{"iespecificstyle"}%<!--[if IE]><style type="text/css" media="screen">
+%TMPL:DEF{"styles:skin"}%<style type="text/css" media="all">%IF{ "$ PATTERNSKINURL" then="@import url('%PATTERNSKINURL%');"}%
+</style>%TMPL:END%
+
+
+%TMPL:DEF{"styles:iespecific"}%<!--[if IE]><style type="text/css" media="screen">
 pre {
 	overflow-x:auto;
 	padding-bottom:expression(this.scrollWidth > this.offsetWidth ? 16 : 0);
@@ -63,4 +67,4 @@ pre {
 }
 </style><![endif]-->%TMPL:END%
 
-%TMPL:DEF{"javascriptaffectedstyle"}%<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswikiStyles.js"></script>%TMPL:END%
+%TMPL:DEF{"styles:javascript_affected"}%<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswikiStyles.js"></script>%TMPL:END%
