--- a/core/templates/css.tmpl
+++ b/core/templates/css.tmpl
@@ -1,23 +1,23 @@
 %{ This is a default template }%
 
-%TMPL:DEF{"defaultstyle"}%%TMPL:P{"twikibase"}%
-%TMPL:P{"twikistyle"}%
-%TMPL:P{"iespecificstyle"}%
-%TMPL:P{"javascriptaffectedstyle"}%
+%TMPL:DEF{"defaultstyle"}%%TMPL:P{"styles:base"}%
+%TMPL:P{"styles:default"}%
+%TMPL:P{"styles:iespecific"}%
+%TMPL:P{"styles:javascript_affected"}%
 %TMPL:P{"templatestyle"}%%TMPL:END%
 
 
-%TMPL:DEF{"twikibase"}%<style type="text/css" media="all">
+%TMPL:DEF{"styles:base"}%<style type="text/css" media="all">
 @import url('%PUBURLPATH%/%SYSTEMWEB%/SkinTemplates/base.css');
 </style>%TMPL:END%
 
 
-%TMPL:DEF{"twikistyle"}%<style type="text/css" media="all">
+%TMPL:DEF{"styles:default"}%<style type="text/css" media="all">
 @import url('%PUBURLPATH%/%SYSTEMWEB%/SkinTemplates/default.css');
 </style>%TMPL:END%
 
 
-%TMPL:DEF{"iespecificstyle"}%<!--[if IE]><style type="text/css" media="screen">
+%TMPL:DEF{"styles:iespecific"}%<!--[if IE]><style type="text/css" media="screen">
 pre {
 	overflow-x:auto;
 	padding-bottom:expression(this.scrollWidth > this.offsetWidth ? 16 : 0);
@@ -26,4 +26,4 @@ pre {
 <![endif]-->%TMPL:END%
 
 
-%TMPL:DEF{"javascriptaffectedstyle"}%%{ To be implemented by sub-skins }%%TMPL:END%
+%TMPL:DEF{"styles:javascript_affected"}%%{ Default skin does not provide Javacript. To be implemented by sub-skins. }%%TMPL:END%
