Item6041: fix empty bullet list Item324: get it working on Foswiki Item295: further detoxing
git-svn-id: http://svn.foswiki.org/trunk@1043 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/css/popup_src.css
+++ b/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/css/popup_src.css
@@ -7,7 +7,7 @@ td.colours {
   padding: 0;
 }
 
-td.twikicolours {
+td.foswikicolours {
   border-width : 2px;
   border-style : solid;
   border-color : red;
