--- a/PatternSkin/templates/viewleftbar.pattern.tmpl
+++ b/PatternSkin/templates/viewleftbar.pattern.tmpl
@@ -6,7 +6,7 @@
 
 
 %TMPL:DEF{"webleftbarindicator"}%<div class="patternWebIndicator">
-   * [[%BASEWEB%.%HOMETOPIC%][%ICON{"web-bg-small"}% <nop>%BASEWEB%]]
+   * [[%BASEWEB%.%HOMETOPIC%][<nop>%BASEWEB%]]
 </div>%TMPL:END%
 
 
