Item352: Rebranding HistoryPlugin It was confirmed that it worked with TwikiCompat. before the renaming
git-svn-id: http://svn.foswiki.org/trunk@1077 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/HistoryPlugin/templates/oopshistory.tmpl
+++ b/HistoryPlugin/templates/oopshistory.tmpl
@@ -5,7 +5,7 @@ The script:skintemplate was introduced in 4.2.0 so the CSS in this template only
 works in 4.2.0 and onwards so this feature has not been used.
 Also please note that HistoryPlugin must be tested in context with both RevCommentPlugin and CompareRevisionsAddOn
 The 3 extensions form a working entity. Never modify this template without testing the 3 in combination.
-This version is tested with TWiki 4.2.0 and 4.1.2 in IE5, IE6 and FF2.
+This version is tested with TWiki 4.2.0 and 4.1.2 and Foswiki in IE6, IE7 and FF3.
 }%
 
 
