Item264: rebrand patternskin
git-svn-id: http://svn.foswiki.org/trunk@1080 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/layout.css
+++ b/PatternSkin/pub/System/PatternSkin/layout.css
@@ -7,7 +7,7 @@ Parts of these notes are
 (c) Big John @ www.positioniseverything.net and (c) Paul O'Brien @ www.pmob.co.uk, all of whom contributed significantly to the design of
 the css and html code.
 
-Reworked for TWiki: (c) Arthur Clemens @ visiblearea.com
+Reworked for Foswiki: (c) Arthur Clemens @ visiblearea.com
 */
 
 html, body {
