--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -49,7 +49,8 @@ hr {
 }
 /* put overflow pre in a scroll area */
 pre {
-    width:100%;
+    width:auto
+    height:1%;
     margin:1em 0; /* Win IE tries to make this bigger otherwise */
     border-style:solid;
     border-width:1px;
@@ -74,7 +75,7 @@ ol li, ul li {}
 blockquote {
 	padding:.5em 1.25em;
 	border-style:solid;
-	border-width:1px 0 1px 3px;
+	border-width:1px 1px 1px 5px;
 }
 
 /* Text */
@@ -101,11 +102,14 @@ h2, h3, h4, h5, h6 {
 	/* give header a background color for easy scanning:*/
 	padding:.25em 10px;
 	margin:1.25em -10px .35em -10px;
-	border-width:0 0 1px 0;
-	border-style:solid;
 	height:auto;	
 }
-
+/*
+h2 {
+	border-width:0 0 1px 0;
+	border-style:solid;
+}
+*/
 h1.patternTemplateTitle {
 	font-size:180%;
 	text-align:center;
@@ -376,8 +380,6 @@ a.twikiSubmit:visited:active {
 	/* form or attachment table inside topic area */
 	font-size:94%; /*S2*/
 	padding:1em 20px; /*S5*/ /* top:use less padding for the toggle link; bottom:use less space in case the table is folded in  */
-	border-width:1px 0 0 0;
-	border-style:solid;
 	margin:0;
 }
 .twikiAttachments .twikiTable,
@@ -604,6 +606,11 @@ a.twikiLinkInHeaderRight {
 	/* change font size here */
 	font-size:105%;
 }
+.patternNoViewPage #patternOuter,
+.patternPrintPage #patternOuter {
+	margin-left:0;
+	margin-right:0;
+}
 #patternTopBar {
 	border-width:1px;
 	border-style:none none solid none;
@@ -622,34 +629,28 @@ a.twikiLinkInHeaderRight {
 	padding-right:.5em;
 	padding-left:1em;
 }
-
-/* top paddings */
 #patternMainContents,
 #patternBottomBarContents,
+#patternLeftBarContents,
+#patternTopBarContents {
+	padding-right:2em;
+	padding-left:2em;
+}
+#patternLeftBarContents,
+#patternMainContents {
+	padding-top:2em;
+}
 #patternLeftBarContents {
+	padding-bottom:2em;
+}
+#patternTopBarContents {
+	padding-top:1em;
+}
+#patternBottomBarContents {
 	padding-top:1em;
 }
 .patternNoViewPage #patternMainContents {
 	padding-top:1.5em;
-}
-
-/* right paddings */
-#patternMainContents,
-#patternTopBarContents,
-#patternBottomBarContents {
-	padding-right:2.5em;
-}
-
-
-/* left paddings */
-#patternTopBarContents {
-	padding-left:1em; /*S6*/
-}
-#patternMainContents {
-	padding-left:2.5em;
-}
-#patternBottomBarContents {
-	padding-left:2.5em;
 }
 
 /* bottom paddings */
@@ -657,12 +658,8 @@ a.twikiLinkInHeaderRight {
 #patternBottomBarContents {
 	padding-bottom:2em;
 }
-
 .patternTopic {
-	margin:.5em 0 2em 0;
-}
-.patternViewPage #patternBottomBarContents {
-	padding-left:1em; /*S6*/
+	margin:1em 0 2em 0;
 }
 .patternNoViewPage #patternMainContents,
 .patternNoViewPage #patternBottomBarContents {
@@ -675,7 +672,7 @@ a.twikiLinkInHeaderRight {
 	margin-right:2%;
 }
 
-#patternLeftBarContents {}
+
 #patternLeftBarContents img {
 	margin:0 3px 0 0;
 	vertical-align:text-bottom;
@@ -743,9 +740,7 @@ html>body #patternLeftBarContents li { /* Mozilla */
 }
 
 /* form options in top bar */
-.patternMetaMenu {
-        padding-top:12px;
-}
+.patternMetaMenu {}
 .patternMetaMenu input,
 .patternMetaMenu select,
 .patternMetaMenu select option {
@@ -821,8 +816,7 @@ html>body #patternLeftBarContents li { /* Mozilla */
 }
 
 .patternTopicActions {
-	border-width:0 0 1px 0;
-	border-style:solid;
+	border:none;
 }
 .patternTopicAction {
 	line-height:1.5em;
@@ -833,7 +827,7 @@ html>body #patternLeftBarContents li { /* Mozilla */
 }
 .patternOopsPage .patternTopicActions,
 .patternEditPage .patternTopicActions {
-	margin:1em 0 0 0;
+	margin:2em 0 0 0;
 }
 .patternAttachPage .patternTopicAction,
 .patternRenamePage .patternTopicAction {
@@ -853,9 +847,6 @@ html>body #patternLeftBarContents li { /* Mozilla */
 }
 .patternTopicAction .patternSaveOptions {
 	margin-top:.5em;
-}
-.patternTopicAction .patternSaveOptions .patternSaveOptionsContents {
-	padding:.2em 0;
 }
 .patternNoViewPage .patternTopicAction {
 	margin-top:-1px;
@@ -972,10 +963,7 @@ h4.patternSearchResultsHeader {
 .patternSearched {
 	display:block;
 }
-.patternSaveHelp {
-	line-height:1.5em;
-	padding:.5em 20px; /*S5*/
-}
+
 
 /* Search results in book view format */
 
@@ -1001,6 +989,13 @@ h4.patternSearchResultsHeader {
 
 /* edit.pattern.tmpl */
 
+.patternEditPage #patternMainContents,
+.patternEditPage .patternTopic {
+	padding:0;
+}
+.patternEditPage .patternTopic {
+	margin-bottom:0;
+}
 .patternEditPage .twikiForm {
 	margin:1em 0 0 0;
 }
@@ -1018,20 +1013,23 @@ h4.patternSearchResultsHeader {
 	font-family:arial, verdana, sans-serif;
 }
 .twikiChangeFormButtonHolder {
-	float:right;
-	margin:.5em 0 -.5em 0;
+	float:left;
+	margin:.5em 0;
+}
+.patternEditPage .patternTopicActions {
+	float:left;
 }
 .twikiFormHolder { /* constrains the textarea */
 	width:100%;
 }
+.patternSig {
+
+}
 .patternSigLine {
-	padding:.25em 0;
+	margin:.5em 0;
 	border-style:none;
 	height:1%; /* for IE */
-}
-.patternOopsPage .patternTopicActions,
-.patternEditPage .patternTopicActions {
-	margin:1em 0 0 0;
+	float:right;
 }
 .patternTextareaButton {
 	margin:0 0 0 1px;
@@ -1042,6 +1040,13 @@ h4.patternSearchResultsHeader {
 }
 .patternButtonFontSelector {
 	margin:0 8px 0 0;
+}
+.patternSaveOptionsContents {
+	margin:.5em 0 0 0;
+}
+.patternSaveHelp {
+	margin:2em 0 0 0;
+	line-height:1.5em;
 }
 
 /* preview.pattern.tmpl */
