--- a/PatternSkin/pub/System/PatternSkinCssCookbookEditTableStyle/edittable.css
+++ b/PatternSkin/pub/System/PatternSkinCssCookbookEditTableStyle/edittable.css
@@ -1,15 +1,10 @@
 
 /* 1 */
-.editTableInput,
-.editTableTextarea {
+.patternTopic .editTableInput,
+.patternTopic .editTableTextarea {
 	font-family:arial, "Lucida Grande", verdana, sans-serif;
 }
 /* 2 */
-.editTable .twikiTable td {
+.patternTopic .editTable .twikiTable td {
 	vertical-align:top;
-}
-/* 3 */
-.editTableInput,
-.editTableTextarea {
-	background-color:#FBF7E8;	
 }
