--- a/PatternSkin/templates/edit.pattern.tmpl
+++ b/PatternSkin/templates/edit.pattern.tmpl
@@ -1,6 +1,7 @@
 %TMPL:INCLUDE{"edit"}%
-%TMPL:DEF{"logo"}%%TMPL:END%%{ don't show a logo to make best use of screen estate }%
-
+%{ don't show these elements to make best use of screen estate: }%
+%TMPL:DEF{"logo"}%%TMPL:END%
+%TMPL:DEF{"bottombar"}%%TMPL:END%
 
 
 %TMPL:DEF{"script:skintemplate"}%%IF{"not context TinyMCEPluginEnabled or $nowysiwyg='1'" then='$percntTMPL:P{\"script:skintemplate:edit\"}$percnt'}%%TMPL:END%
@@ -8,7 +9,7 @@
 %TMPL:DEF{"script:skintemplate:edit"}%<script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswikiPref.js"></script>
 <script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/JavascriptFiles/foswiki_edit.js"></script>
 <script type="text/javascript" src="%PUBURLPATH%/%SYSTEMWEB%/PatternSkin/pattern_edit.js"></script>
-<script>
+<script type="text/javascript">
 foswiki.Event.addLoadEvent(initForm);
 </script>%TMPL:END%
 
@@ -27,7 +28,7 @@ hideimgleft="%ICONURLPATH{toggleclose}%"}%</div><!--//patternTop-->%TMPL:END%
 %TMPL:DEF{"revCommentPluginOptions"}%%IF{ "context RevCommentPluginEnabled" then="<div class='revComment'><label for='comment'>Summary of changes</label> <input class='twikiEditComment twikiInputField' type='text' style='width:50%' name='comment' id='comment' /> <a target='RevComment' class='twikiPopUp' href='%SCRIPTURL{"view"}%/%SYSTEMWEB%/RevComment' rel='nofollow'>%MAKETEXT{"help"}%</a></div><!--/revComment-->" else=""}%%TMPL:END%
 
 
-%TMPL:DEF{"forcerevisioncheckbox"}%<span class="patternSaveOptionsContents"><input type="checkbox" class="twikiCheckbox" title="Creates a new topic revision when saving" id="forcenewrevision" name="forcenewrevision" %FORCENEWREVISIONCHECKBOX% /><label for="forcenewrevision">%MAKETEXT{"Force new revision"}%</label> <a class="twikiPopUp" href="%SCRIPTURL{"view"}%/%SYSTEMWEB%/ForceNewRevision" target="ForceNewRevision" rel='nofollow' title='%MAKETEXT{"Read new revision help text in new window"}%'>%MAKETEXT{"help"}%</a></span><!--/patternSaveOptionsContents-->%TMPL:END%
+%TMPL:DEF{"forcerevisioncheckbox"}%<div class="patternSaveOptionsContents"><input type="checkbox" class="twikiCheckbox" title="Creates a new topic revision when saving" id="forcenewrevision" name="forcenewrevision" %FORCENEWREVISIONCHECKBOX% /><label for="forcenewrevision">%MAKETEXT{"Force new revision"}%</label> <a class="twikiPopUp" href="%SCRIPTURL{"view"}%/%SYSTEMWEB%/ForceNewRevision" target="ForceNewRevision" rel='nofollow' title='%MAKETEXT{"Read new revision help text in new window"}%'>%MAKETEXT{"help"}%</a></div><!--/patternSaveOptionsContents-->%TMPL:END%
 
 
 %TMPL:DEF{"saveoptions"}%<div class="patternSaveOptions">%TMPL:P{"forcerevisioncheckbox"}%</div><!--/patternSaveOptions-->%TMPL:END%
@@ -47,18 +48,18 @@ hideimgleft="%ICONURLPATH{toggleclose}%"}%</div><!--//patternTop-->%TMPL:END%
 %TMPL:DEF{"button_cancel"}%<input type="submit" class="twikiButton twikiButtonCancel" name="action_cancel" id="cancel" title='%MAKETEXT{"Cancel editing and discard changes"}%' %MAKETEXT{"value='Cancel' accesskey='c'"}% onclick="suppressSaveValidation()" />%TMPL:END%
 
 
-%TMPL:DEF{"actionbuttons_help"}%<div class="patternSaveHelp twikiGrayText">%TMPL:P{"accesskeys_help"}%</div><!--/patternSaveHelp-->%TMPL:END%
+%TMPL:DEF{"actionbuttons_help"}%<div class="patternSaveHelp">%TMPL:P{"accesskeys_help"}%</div><!--/patternSaveHelp-->%TMPL:END%
 
 
 %TMPL:DEF{"accesskeys_help"}%%ICON{info}% <a class="twikiPopUp" target="AccessKeys" href="%SCRIPTURL{"view"}%/%SYSTEMWEB%/AccessKeys">%MAKETEXT{"Access keys"}%</a>: %MAKETEXT{"S = Save, Q = Quiet save, K = Save and Continue, P = Preview, C = Cancel"}%%TMPL:END%
 
 
 
-%TMPL:DEF{"topicinfo"}%<div class="patternTopicActions"><div class="patternTopicAction">%TMPL:P{"revCommentPluginOptions"}%<div class="patternActionButtons">%TMPL:P{"action_buttons"}%</div><!--/patternActionButtons-->
-%TMPL:P{"saveoptions"}%</div><!--/patternTopicAction--></div><!--/patternTopicActions-->%TMPL:P{"actionbuttons_help"}%%TMPL:END%
+%TMPL:DEF{"topicinfo"}%<div>%TMPL:P{"revCommentPluginOptions"}%<div class="patternActionButtons">%TMPL:P{"action_buttons"}%</div><!--/patternActionButtons-->
+%TMPL:P{"saveoptions"}%</div>%TMPL:END%
 
 
-%TMPL:DEF{"pagehelp"}%%TWISTYTOGGLE{id="edithelp" mode="div" remember="on" noscript="hide"}%<div class="twikiHelp">%TMPL:P{"help"}%</div>%ENDTWISTYTOGGLE%%TMPL:END%
+%TMPL:DEF{"pagehelp"}%%TWISTYTOGGLE{id="edithelp" mode="div" remember="on" noscript="hide"}%<div class="twikiHelp">%TMPL:P{"help"}%%TMPL:P{"actionbuttons_help"}%</div>%ENDTWISTYTOGGLE%%TMPL:END%
 
 
 %TMPL:DEF{"textarea"}%<textarea class="twikiTextarea twikiEditboxStyleProportional" id="topic" name="text" rows="%EDITBOXHEIGHT%" cols="%EDITBOXWIDTH%" style='%EDITBOXSTYLE%' onkeydown='handleKeyDown(event)'>%TEXT%</textarea>
