--- a/PatternSkin/pub/System/PatternSkin/column_twiki.css
+++ b/PatternSkin/pub/System/PatternSkin/column_twiki.css
@@ -5,7 +5,7 @@ compatible bar for TWiki installations
 #patternOuter {
 	margin-left:14em;
 }
-#patternLeftBar {
+#patternSideBar {
 	width:14em;
 	margin-left:-14em;
 }
