--- a/PatternSkin/pub/System/PatternSkin/print.css
+++ b/PatternSkin/pub/System/PatternSkin/print.css
@@ -27,7 +27,7 @@
 		margin-left:0;
 		margin-right:0;
 	}
-	#patternLeftBar {
+	#patternSideBar {
 		width:0em;
 		margin-left:0em;
 		display:none;
