--- a/PatternSkin/pub/System/PatternSkinCssCookbookFonts/fonts.css
+++ b/PatternSkin/pub/System/PatternSkinCssCookbookFonts/fonts.css
@@ -10,17 +10,17 @@ h1, h2, h3, h4, h5, h6 {
 	border:3px double #555;
 	padding:.5em;
 }
-#patternLeftBar {
+#patternSideBar {
 	font-family:Times;
 }
 .patternTop {
 	font-family:Times;
 }
-#patternLeftBar a:link,
-#patternLeftBar a:visited {
+#patternSideBar a:link,
+#patternSideBar a:visited {
 	color:#666;
 }
-#patternLeftBar a:hover {
+#patternSideBar a:hover {
 	color:#acc3b1;
 }
 .patternLeftBarPersonal {
