--- a/PatternSkin/templates/foswiki.pattern.tmpl
+++ b/PatternSkin/templates/foswiki.pattern.tmpl
@@ -55,15 +55,15 @@
 %TMPL:DEF{"main"}%<div id="patternScreen">
 <div id="patternPageShadow">
 <div id="patternPage">
-%TMPL:P{"startleftbarwrapper"}%<div id="patternOuter">
+%TMPL:P{"startsidebarwrapper"}%<div id="patternOuter">
 <div id="patternFloatWrap">
 <div id="patternMain">%TMPL:P{"topbarspacer"}%
 <div id="patternMainContents">%TMPL:P{"logo"}%%TMPL:P{"patterntopiccontents"}%
 </div><!-- /patternMainContents-->
-</div><!-- /patternMain-->%TMPL:P{"leftbar"}%
+</div><!-- /patternMain-->%TMPL:P{"sidebar"}%
 </div><!-- /patternFloatWrap-->
 <div class="clear">&nbsp;</div>
-</div><!-- /patternOuter-->%TMPL:P{"endleftbarwrapper"}%%TMPL:P{"topbar"}%%TMPL:P{"bottombar"}%
+</div><!-- /patternOuter-->%TMPL:P{"endsidebarwrapper"}%%TMPL:P{"topbar"}%%TMPL:P{"bottombar"}%
 </div><!-- /patternPage-->
 </div><!-- /patternPageShadow-->
 </div><!-- /patternScreen-->%TMPL:END%
