--- a/PatternSkin/templates/view.pattern.tmpl
+++ b/PatternSkin/templates/view.pattern.tmpl
@@ -1,7 +1,7 @@
 %TMPL:INCLUDE{"view"}%
 %TMPL:INCLUDE{"viewtopicactionbuttons"}%
 %TMPL:INCLUDE{"viewtopbar"}%
-%TMPL:INCLUDE{"viewleftbar"}%
+%TMPL:INCLUDE{"viewsidebar"}%
 %TMPL:DEF{"logo"}%%TMPL:END%
 
 %TMPL:DEF{"bodyclassname"}%patternViewPage%IF{"defined raw" then=" patternRawViewPage"}%%TMPL:END%
