--- a/PatternSkin/pub/System/PatternSkinCssCookbookNoLeftBar/hideleftbar.css
+++ b/PatternSkin/pub/System/PatternSkinCssCookbookNoLeftBar/hideleftbar.css
@@ -1,7 +1,7 @@
 #patternOuter {
 	margin-left:0;
 }
-#patternLeftBar {
+#patternSideBar {
 	display:none;
 }
 /* for the content left margin use a bit smaller margin */
