--- a/PatternSkin/templates/edit.pattern.tmpl
+++ b/PatternSkin/templates/edit.pattern.tmpl
@@ -55,7 +55,7 @@ hideimgleft="%ICONURLPATH{toggleclose}%"}%</div><!--//patternTop-->%TMPL:END%
 
 
 
-%TMPL:DEF{"topicinfo"}%<div>%TMPL:P{"revCommentPluginOptions"}%<div class="patternActionButtons">%TMPL:P{"action_buttons"}%</div><!--/patternActionButtons-->
+%TMPL:DEF{"topicinfo"}%<div>%TMPL:P{"revCommentPluginOptions"}%<div class="patternActionButtons">%TMPL:P{"action_buttons"}%<br class="twikiClear" /></div><!--/patternActionButtons-->
 %TMPL:P{"saveoptions"}%</div>%TMPL:END%
 
 
