--- a/PatternSkin/templates/viewsidebar.pattern.tmpl
+++ b/PatternSkin/templates/viewsidebar.pattern.tmpl
@@ -1,15 +1,20 @@
 %{ to include a side bar on a page, just include this template in the page template }%
 %TMPL:DEF{"sidebar"}%<div id="patternSideBar"><div id="patternClearHeaderLeft"></div>
-<div id="patternSideBarContents">%TMPL:P{"webleftbar"}%
+<div id="patternSideBarContents">%TMPL:P{"websidebar"}%
 </div><!-- /patternSideBarContents--></div><!-- /patternSideBar-->%TMPL:END%
 
 
-%TMPL:DEF{"webleftbarindicator"}%<div class="patternWebIndicator">
-   * [[%BASEWEB%.%HOMETOPIC%][<nop>%BASEWEB% Web]]
-</div>%TMPL:END%
+%TMPL:DEF{"sidebar:webindicator"}%<div class="patternWebIndicator">
+   * <a href='%SCRIPTURL{"view"}%/%BASEWEB%/%HOMETOPIC%'><img src='%ICONURL{"web-bg"}%' style='background-color:%WEBBGCOLOR%' alt='%WEB%'/> <nop>%BASEWEB%</a>
+</div><!--/patternWebIndicator-->%TMPL:END%
 
 
-%TMPL:DEF{"webleftbar"}%%TMPL:P{"webleftbarindicator"}%
+%TMPL:DEF{"sidebar:weblink"}%<div class="patternWebIndicator">
+   * [[%BASEWEB%/%HOMETOPIC%][%BASEWEB%]]
+</div><!--/patternWebIndicator-->%TMPL:END%
+
+
+%TMPL:DEF{"websidebar"}%%TMPL:P{"sidebar:weblink"}%
 %INCLUDE{"%WEB%.WebLeftBar"}%%TMPL:END%
 
 
