--- a/PatternSkin/templates/viewsidebar.pattern.tmpl
+++ b/PatternSkin/templates/viewsidebar.pattern.tmpl
@@ -14,8 +14,8 @@
 </div><!--/patternWebIndicator-->%TMPL:END%
 
 
-%TMPL:DEF{"websidebar"}%%TMPL:P{"sidebar:weblink"}%
-%INCLUDE{"%WEB%.WebLeftBar"}%%TMPL:END%
+%TMPL:DEF{"websidebar"}%%TMPL:P{"sidebar:weblink"}%%IF{"istopic 'WebLeftBar'" then="$percntINCLUDE{$quot%WEB%.WebLeftBar$quot}$percnt" else="$percntINCLUDE{$quot%WEB%.WebLeftBarExample$quot}$percnt"}%
+%TMPL:END%
 
 
 %TMPL:DEF{"startsidebarwrapper"}%<div id="patternWrapper">%TMPL:END%
