Item264: fix page background color at bottom of small pages
git-svn-id: http://svn.foswiki.org/trunk@1138 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -39,8 +39,11 @@
 /* GENERAL HTML ELEMENTS */
 
 html body {
-   background-color:#fff;
+   background-color:#f5f5f5;
    color:#000;
+}
+html body.patternEditPage {
+   background-color:#f5f5f5;
 }
 /* be kind to netscape 4 that doesn't understand inheritance */
 body, p, li, ul, ol, dl, dt, dd, acronym, h1, h2, h3, h4, h5, h6 {
