Item264: minor fixes
git-svn-id: http://svn.foswiki.org/trunk@1139 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -994,7 +994,7 @@ h4.patternSearchResultsHeader {
 	margin-bottom:0;
 }
 .patternEditPage .foswikiForm {
-	margin:1em 0 0 0;
+	margin:.5em 0 0 0;
 }
 .patternEditPage .foswikiForm h1,
 .patternEditPage .foswikiForm h2,
