--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -43,7 +43,7 @@ html body {
    color:#000;
 }
 html body.patternEditPage {
-   background-color:#f5f5f5;
+   background-color:#fff;
 }
 /* be kind to netscape 4 that doesn't understand inheritance */
 body, p, li, ul, ol, dl, dt, dd, acronym, h1, h2, h3, h4, h5, h6 {
