Item264: fix typo bug in css
git-svn-id: http://svn.foswiki.org/trunk@1141 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -49,7 +49,7 @@ hr {
 }
 /* put overflow pre in a scroll area */
 pre {
-    width:auto
+    width:auto;
     height:1%;
     margin:1em 0; /* Win IE tries to make this bigger otherwise */
     border-style:solid;
