Item385: Improve layout attachment button and form header: fix attachment count; make the twisty a button; add title and direct edit link to form
git-svn-id: http://svn.foswiki.org/trunk@1156 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -291,6 +291,11 @@ table.twikiFormTable td.twikiFormTableRow {
 .patternContent .twikiAttachments,
 .patternContent .foswikiForm {
    background-color:#eef7fa;
+   border-color:#fff;
+}
+.twikiAttachments .twikiButton h3,
+.foswikiForm .twikiButton h3 {
+	color:#d1400e;
 }
 .twikiAttachments table,
 table.twikiFormTable {
@@ -300,6 +305,8 @@ table.twikiFormTable {
 .twikiAttachments table {
    background-color:#fff;
 }
+.foswikiForm td,
+.foswikiForm th,
 .twikiAttachments td, 
 .twikiAttachments th {
    border-color:#e2e2e2;
