--- a/PatternSkin/templates/formtables.pattern.tmpl
+++ b/PatternSkin/templates/formtables.pattern.tmpl
@@ -3,14 +3,11 @@
 
 
 %{ Start of form table }%
-%TMPL:DEF{FORM:display:header}%<div class="foswikiForm">
-<table class='twikiFormTable' border='1'>%TMPL:P{FORM:display:header:headerrow}%%TMPL:END%
+%TMPL:DEF{FORM:display:header}%<div class="foswikiForm">%TMPL:P{FORM:display:title}%<table class='twikiFormTable' border='1'>%TMPL:P{FORM:display:header:headerrow}%%TMPL:END%
 
 
 %{ Header }%
-%TMPL:DEF{FORM:display:header:headerrow}%<tr><th class='twikiFormTableHRow foswikiFirstCol' colspan='2'>
-[[%A_TITLE%]]
-</th></tr>%TMPL:END%
+%TMPL:DEF{FORM:display:header:headerrow}%%TMPL:END%
 
 
 
@@ -22,5 +19,11 @@
 
 
 %{ Footer }%
-%TMPL:DEF{FORM:display:footer}%</table>%TMPL:P{FORM:display:footer:editlink}%
-</div><!-- /foswikiForm -->%TMPL:END%
+%TMPL:DEF{FORM:display:footer}%</table></div><!-- /foswikiForm -->%TMPL:END%
+
+
+%TMPL:DEF{FORM:display:title}%<h3>[[%A_TITLE%]] %TMPL:P{FORM:display:editlink}%</h3>%TMPL:END%
+
+
+%TMPL:DEF{FORM:display:editlink}%<span class='patternSmallLinkToHeader'><a href='%SCRIPTURL{edit}%/%WEB%/%TOPIC%?t=%GMTIME{$epoch}%;action=form'>%MAKETEXT{"edit"}%</a></span>%TMPL:END%
+
