--- a/PatternSkin/templates/foswiki.pattern.tmpl
+++ b/PatternSkin/templates/foswiki.pattern.tmpl
@@ -30,6 +30,8 @@
 <link rel="icon" href="%FAVICON%" type="image/x-icon" />
 <link rel="shortcut icon" href="%FAVICON%" type="image/x-icon" />
 <link rel="alternate" href="%SCRIPTURL{edit}%/%BASEWEB%/%BASETOPIC%?_T=%DATE%" type="application/x-wiki" title="edit %BASETOPIC%" />
+<meta name="TOPIC" content="%INTURLENCODE{%TOPIC%}%" />
+<meta name="WEB" content="%INTURLENCODE{%WEB%}%" />
 <meta name="SCRIPTURLPATH" content="%SCRIPTURLPATH%" />
 <meta name="SCRIPTSUFFIX" content="%SCRIPTSUFFIX%" />
 <meta name="TEXT_JUMP" content="%MAKETEXT{"Jump"}%" />
